syntax = "proto3";

option go_package = "github.com/george/protocols/chain";
option java_package = "cn.aberic.george.protocols.chain";
option java_outer_classname = "DataProto";

package chain;

// 信息载体，包含授信的签名信息头
message Data {
  // 数据载体头
  Header header = 1;
  // 数据内容，类型由数据载体头中类型定义
  //
  // 主要有LedgerConfig、BlockInfo和TransactionInfo
  //
  // hex.decode解析
  bytes info = 2;
}

// 数据载体头类型
enum HeaderType {
  // 未定义数据类型
  UNDEFINED = 0;
  // 账本数据类型
  LEDGER = 1;
  // 合约数据类型
  CONTRACT = 2;
  // 区块数据类型
  BLOCK = 3;
  // 交易数据类型
  TRANSACTION = 4;
}

// 数据载体头
message Header {
  HeaderType type = 1;
  // 签名头，hex.decode解析
  bytes signature = 2;
  // 账本头，hex.decode解析
  bytes ledger = 3;
}

// 签名头是对数据载体进行签名的结果，并包含了签名者的证书信息
message SignatureHeader {
  // 创建者证书信息，hex.decode解析
  bytes creator = 1;
  // 签名信息，接收方验签
  bytes sign = 2;
}

// 账本头
message LedgerHeader {
  // 账本id
  string id = 1;
  // 账本创世区块版本，创世区块记录账本参与方的信息，允许变更，会产生版本迭代数据
  uint32 version = 2;
}