/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/chain";
option java_package = "cn.aberic.george.protocols.chain";
option java_outer_classname = "GenesisProto";

package chain;

import "protos/chain/organization.proto";
import "protos/chain/policy.proto";
import "protos/chain/sign.proto";

// 创世区块配置对象
message GenesisConfig {
  // 创世区块
  Genesis genesis = 1;
  // 对当前创世区块信息进行的满足当前创世区块执行策略的签名信息集合
  Signet signet = 2;
  // 对当前创世区块信息进行的满足前一创世区块执行策略的签名信息集合
  Signet signet_pre = 3;
}

// 创世区块
message Genesis {
  // 整个平台的组织机构集合
  repeated Organization organizations = 1;
  // 默认账本运行依据
  Foundation foundation = 2;
  // 平台创世区块更新策略
  Policy policy = 3;
}