/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/chain";
option java_package = "cn.aberic.george.protocols.chain";
option java_outer_classname = "LedgerProto";

package chain;

import "protos/chain/organization.proto";
import "protos/chain/policy.proto";
import "protos/chain/sign.proto";

// 账本配置对象
message LedgerConfig {
  // 账本
  Ledger ledger = 1;
  // 对当前账本信息进行的满足当前账本执行策略的签名信息集合
  Signet signet = 2;
  // 对当前账本信息进行的满足前一账本执行策略的签名信息集合
  Signet signet_pre = 3;
}

// 账本
message Ledger {
  // 账本id
  string id = 1;
  // 账本名称
  string name = 2;
  // 账本描述
  string description = 3;
  // 允许参与账本的组织机构集合及组织机构策略集合
  repeated OrganizationPolicy organization_policies = 4;
  // 账本运行依据
  Foundation foundation = 5;
  // 账本更新策略
  Policy policy = 6;
  // 账本运行子内容更新策略
  UpgradePolicy upgrade_policy = 7;
}