/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/chain";
option java_package = "cn.aberic.george.protocols.chain";
option java_outer_classname = "TransactionProto";

package chain;

import "comm/timestamp.proto";
import "chain/contract.proto";
import "chain/rwset.proto";
import "chain/sign.proto";

// 区块中每笔被提交的交易
message Transaction {
  // 交易data集合
  repeated bytes transactions = 1;
}

// 交易数据信息
message TransactionInfo {
  // 交易hash，sm3
  string hash = 1;
  // 交易接收时间
  comm.Timestamp timestamp = 2;
  // 交易提交时间
  comm.Timestamp commit = 3;
  // 交易所依赖合约
  ContractBase contract = 4;
  // 交易提交的方法名
  string function = 5;
  // 交易提交的数据
  bytes value = 6;
  // 读写集
  RWSet set = 7;
  // 对当前交易hash进行sm2签名的信息，签名者为交易首次提交节点，如p1
  Signer signer = 8;
}